# HallProva_fra

./: CMakeLists.txt  hall  hallsensor.cpp  hallsensor.h  main.cpp
